--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@vue/test-utils": "2.0.0-rc.18",
     "autoprefixer": "10.4.0",
     "c8": "^7.11.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-vue": "^8.4.0",
     "happy-dom": "^2.25.1",
     "postcss": "8.3.11",
     "tailwindcss": "2.2.19",
