--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.0",
     "c8": "^7.11.0",
     "eslint": "^8.7.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.4.0",
     "happy-dom": "^2.25.1",
     "postcss": "8.3.11",
