--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.3.1",
     "vue": "3.2.25",
-    "vue-multiselect": "^2.1.6",
     "vue-router": "4"
   },
   "devDependencies": {
