--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,12 @@
 # Local development stage
-FROM node:17-alpine3.14 as development-stage
+FROM node:16.2-alpine3.12 as development-stage
 WORKDIR /app
-RUN yarn install
+RUN npm rebuild esbuild
 EXPOSE 3000
-ENTRYPOINT ["yarn", "dev:host" ]
+ENTRYPOINT ["yarn", "dev:host"]
 
 # Production Build stage
-FROM node:17-alpine3.14 as production-build
+FROM node:16.2-alpine3.12 as production-build
 WORKDIR /app
 COPY ./src /app/src/
 COPY package.json /app/
@@ -16,6 +16,6 @@ COPY vite.config.js /app/
 
 RUN yarn install --frozen-lockfile && yarn build
 
-FROM nginx:1.21.6-alpine as production-stage
+FROM nginx:1.17.6-alpine as production-stage
 
 COPY --from=production-build /app/dist/ /usr/share/nginx/html/
