--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     ports: 
       - 80:80
       - 8080:8080
-      - 3000:3000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
@@ -27,13 +26,14 @@ services:
       - divergen-network
     labels:
       - "traefik.enable=true"
-      - "traefik.port=3000"
       - "traefik.docker.network=divergen-network"
       - "traefik.http.routers.divergen-router.entrypoints=http"
       - "traefik.http.routers.divergen-router.rule=HOST(`local.divergen.cgds`)"
       - "traefik.http.routers.divergen-router.service=frontend"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
-      
+      - "traefik.http.routers.hmr-router.entrypoints=http"
+      - "traefik.http.routers.hmr-router.rule=HOST(`local.divergen.cgds`) && PathPrefix(`/socket.io`)"
+      - "traefik.http.services.frontend-hmr.loadbalancer.server.port=3001"
 
 networks:
   divergen-network:
