--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@vueform/multiselect": "^2.3.1",
     "vue": "3.2.25",
     "vue-router": "4"
