--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,18 @@ yarn-error.log*
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Python Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
