Worked out how to configure traefik to allow the websocket to route through port 3000 for the hot module replacement when deploying the application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,17 @@ version: '3.5'
 services:
   reverse-proxy:
     image: traefik
-    command: --log.level=DEBUG --api.insecure=true --providers.docker
+    command:
+      - "--log.level=DEBUG"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.stream.address=:3000"
     ports: 
       - 80:80
       - 8080:8080
+      - 3000:3000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
@@ -27,13 +34,12 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=divergen-network"
-      - "traefik.http.routers.divergen-router.entrypoints=http"
-      - "traefik.http.routers.divergen-router.rule=HOST(`local.divergen.cgds`)"
-      - "traefik.http.routers.divergen-router.service=frontend"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
-      - "traefik.http.routers.hmr-router.entrypoints=http"
-      - "traefik.http.routers.hmr-router.rule=HOST(`local.divergen.cgds`) && PathPrefix(`/socket.io`)"
-      - "traefik.http.services.frontend-hmr.loadbalancer.server.port=3001"
+      - "traefik.http.routers.frontend-router.entrypoints=web,stream"
+      - "traefik.http.routers.frontend-router.rule=Host(`local.divergen.cgds`)"
+      - "traefik.http.routers.frontend-router.service=frontend-web-service"
+      - "traefik.http.services.frontend-web-service.loadbalancer.server.port=80"
+      - "traefik.http.routers.frontend-router.service=frontend-stream-service"
+      - "traefik.http.services.frontend-stream-service.loadbalancer.server.port=3000"
 
 networks:
   divergen-network:
