wip to investigate switching the vue router to use a web hitsory instead of web hash history, requires changes to the deployment configuration and new catch all route.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   frontend:
     build:
       context: ./frontend/
-      target: development-stage
+      target: production-stage
       dockerfile: Dockerfile
     volumes:
       - ./frontend/src:/app/src
