Adding --no-cache-dir for pip in dockerfile

--- a/docs/prototypes/fast-api-prototype/Dockerfile
+++ b/docs/prototypes/fast-api-prototype/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.9.10-alpine3.15 as development-stage
 WORKDIR /app
 COPY Requirements.txt /app/
-RUN pip install -r Requirements.txt
+RUN pip install -r Requirements.txt --no-cache-dir
 EXPOSE 8000
 ENTRYPOINT [ "python3", "src/main.py" ]
 
@@ -10,6 +10,6 @@ ENTRYPOINT [ "python3", "src/main.py" ]
 FROM python:3.9.10-alpine3.15 as production-stage
 WORKDIR /app
 COPY Requirements.txt /app/
-RUN pip install -r Requirements.txt
+RUN pip install -r Requirements.txt --no-cache-dir
 EXPOSE 8000
 ENTRYPOINT [ "python3", "src/main.py" ]
