--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vueform/multiselect": "^2.3.1",
     "vue": "3.2.25",
