Updated the docker-compose.production.yml networks to include traefik network and moved external to that network

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -29,4 +29,6 @@ services:
 networks:
   divergen-network:
     name: divergen-network-prod
+  traefik:
+    name: traefik-public 
     external: true
