--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,7 +11,7 @@ services:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
         - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`dev.cgds.uab.edu`)  && PathPrefix(`/divergen`)"
-        - "traefik.http.divergen-frontend-prod-router.service=frontend-strip-prefix"
+        - "traefik.http.routers.divergen-frontend-prod-router.middlewares=frontend-strip-prefix"
         - "traefik.http.middlewares.frontend-strip-prefix.stripprefix.prefix=/divergen/"
         - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
 
@@ -25,7 +25,7 @@ services:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
         - "traefik.http.routers.divergen-backend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen/api`)"
-        - "traefik.http.divergen-backend-prod-router.service=backend-strip-prefix"
+        - "traefik.http.routers.divergen-backend-prod-router.middlewares=backend-strip-prefix"
         - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefix=/divergen/api"
         - "traefik.services.divergen-backend-prod.loadbalancer.server.port=8000"
 
