More traefik rules updates in docker-compose.production.yml

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,13 +4,14 @@ services:
   frontend:
     image: gitlab.rc.uab.edu:4567/center-for-computational-genomics-and-data-science/development/divergen/frontend:vprod
     networks:
-      divergen-network:
-      traefik:
+      - divergen-network
+      - traefik
     deploy:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
         - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`dev.cgds.uab.edu`)  && PathPrefix(`/divergen`)"
+        - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-frontend-prod"
         - "traefik.http.routers.divergen-frontend-prod-router.middlewares=frontend-strip-prefix"
         - "traefik.http.middlewares.frontend-strip-prefix.stripprefix.prefix=/divergen/"
         - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
@@ -18,16 +19,17 @@ services:
   backend:
     image: gitlab.rc.uab.edu:4567/center-for-computational-genomics-and-data-science/development/divergen/backend:vprod
     networks:
-      divergen-network:
-      traefik:
+      - divergen-network
+      - traefik
     deploy:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
         - "traefik.http.routers.divergen-backend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen/api`)"
+        - "traefik.http.routers.divergen-backend-prod-router.service=divergen-backend-prod"
         - "traefik.http.routers.divergen-backend-prod-router.middlewares=backend-strip-prefix"
         - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefix=/divergen/api"
-        - "traefik.services.divergen-backend-prod.loadbalancer.server.port=8000"
+        - "traefik.http.services.divergen-backend-prod.loadbalancer.server.port=8000"
 
 networks:
   divergen-network:
