--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,7 +13,7 @@ services:
         - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`dev.cgds.uab.edu`)  && PathPrefix(`/divergen`)"
         - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-frontend-prod"
         - "traefik.http.routers.divergen-frontend-prod-router.middlewares=frontend-strip-prefix"
-        - "traefik.http.middlewares.frontend-strip-prefix.stripprefix.prefix=/divergen/"
+        - "traefik.http.middlewares.frontend-strip-prefix.stripprefix.prefixes=/divergen/"
         - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
 
   backend:
@@ -28,7 +28,7 @@ services:
         - "traefik.http.routers.divergen-backend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen/api`)"
         - "traefik.http.routers.divergen-backend-prod-router.service=divergen-backend-prod"
         - "traefik.http.routers.divergen-backend-prod-router.middlewares=backend-strip-prefix"
-        - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefix=/divergen/api"
+        - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/divergen/api"
         - "traefik.http.services.divergen-backend-prod.loadbalancer.server.port=8000"
 
 networks:
