Put a dot instead of a dash in the docker-compose.production.yml

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,11 +10,12 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
+        - "traefik.http.routers.divergen-frontend-prod-router.entrypoints=http"
         - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen`)"
+        - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-frontend-prod-service"
         - "traefik.http.routers.divergen-frontend-prod-router.middlewares=frontend-strip-prefix"
-        - "traefik.http.middlewares.frontend-strip.prefix.stripprefix.prefixes=/divergen"
-        - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-frontend-prod"
-        - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
+        - "traefik.http.middlewares.frontend-strip-prefix.stripprefix.prefixes=/divergen"
+        - "traefik.http.services.divergen-frontend-prod-service.loadbalancer.server.port=80"
 
   backend:
     image: gitlab.rc.uab.edu:4567/center-for-computational-genomics-and-data-science/development/divergen/backend:vprod
@@ -25,11 +26,12 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
+        - "traefik.http.routers.divergen-backend-prod-router.entrypoints=http"
         - "traefik.http.routers.divergen-backend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen/api`)"
-        - "traefik.http.routers.divergen-backend-prod-router.service=divergen-backend-prod"
+        - "traefik.http.routers.divergen-backend-prod-router.service=divergen-backend-prod-service"
         - "traefik.http.routers.divergen-backend-prod-router.middlewares=backend-strip-prefix"
         - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/divergen/api"
-        - "traefik.http.services.divergen-backend-prod.loadbalancer.server.port=8000"
+        - "traefik.http.services.divergen-backend-prod-service.loadbalancer.server.port=8000"
 
 networks:
   divergen-network:
