--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,42 +1,32 @@
 version: '3.5'
 
 services:
-  reverse-proxy:
-    image: traefik
-    command:
-      - "--log.level=DEBUG"
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    ports: 
-      - 80:80
-      - 8080:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - divergen-network
-    labels:
-      - "traefik.enable=truec"
-      - "traefik.docker.network=divergen-network"
-  
   frontend:
-    build:
-      context: ./frontend/
-      target: production-stage
-      dockerfile: Dockerfile
-    volumes:
-      - ./frontend/src:/app/src
+    image:
     networks:
-      - divergen-network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=divergen-network"
-      - "traefik.http.routers.frontend-router.entrypoints=web,stream"
-      - "traefik.http.routers.frontend-router.rule=Host(`local.divergen.cgds`)"
-      - "traefik.http.routers.frontend-router.service=frontend-web-service"
-      - "traefik.http.services.frontend-web-service.loadbalancer.server.port=80"
+      divergen-network:
+    deploy:
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=divergen-network-prod"
+        - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`prod`) && PathPrefix(`/divergen`)"
+        - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-prod-frontend"
+        - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
+
+  backend:
+    image:
+    networks:
+      divergen-network:
+    deploy:
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=divergen-network-prod"
+        - "traefik.http.routers.divergen-backend-prod-router.rule=Host(`prod`) && (`/api`)"
+        - "traefik.http.divergen-backend-prod-router.service=backend-strip-prefix"
+        - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefix=/api"
+        - "traefik.services.divergen-backend-prod.loadbalancer.server.port=8000"
 
 networks:
   divergen-network:
-    name: divergen-network
+    name: divergen-network-prod
+    external: true
