--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,6 +11,8 @@ services:
         - "traefik.enable=true"
         - "traefik.docker.network=traefik-public"
         - "traefik.http.routers.divergen-frontend-prod-router.rule=Host(`dev.cgds.uab.edu`) && PathPrefix(`/divergen`)"
+        - "traefik.http.routers.divergen-frontend-prod-router.middlewares=frontend-strip-prefix"
+        - "traefik.http.middlewares.frontend-strip.prefix.stripprefix.prefixes=/divergen"
         - "traefik.http.routers.divergen-frontend-prod-router.service=divergen-frontend-prod"
         - "traefik.http.services.divergen-frontend-prod.loadbalancer.server.port=80"
 
