--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,15 +25,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "2.0.1",
-    "@vitest/ui": "^0.1.12",
+    "@vitest/ui": "0.10.0",
     "@vue/test-utils": "2.0.0-rc.18",
-    "c8": "^7.11.0",
+    "c8": "^7.11.2",
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.4.0",
     "happy-dom": "^2.25.1",
     "sinon": "^13.0.1",
-    "vite": "2.7.13",
-    "vitest": "0.1.12"
+    "vite": "2.9.6",
+    "vitest": "0.10.0"
   }
 }
