--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,9 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
-      - "--entrypoints.stream.address=:3000"
     ports: 
       - 80:80
       - 8080:8080
-      - 3000:3000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
@@ -34,12 +32,10 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=divergen-network"
-      - "traefik.http.routers.frontend-router.entrypoints=web,stream"
+      - "traefik.http.routers.frontend-router.entrypoints=web"
       - "traefik.http.routers.frontend-router.rule=Host(`local.divergen.cgds`)"
       - "traefik.http.routers.frontend-router.service=frontend-web-service"
       - "traefik.http.services.frontend-web-service.loadbalancer.server.port=80"
-      - "traefik.http.routers.frontend-router.service=frontend-stream-service"
-      - "traefik.http.services.frontend-stream-service.loadbalancer.server.port=3000"
   
   backend:
     build:
