--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Local Development Stage
-FROM python:3.9.10-alpine3.15 as development-stage
+FROM python:3.9.10 as development-stage
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
@@ -8,7 +8,7 @@ COPY ./src /app/src
 ENTRYPOINT ["/bin/sh", "-c", "uvicorn src.main:app --host 0.0.0.0 --port 8000 --log-level info --reload"]
 
 # Production Build Stage
-FROM python:3.9.10-alpine3.15 as production-stage
+FROM python:3.9.10 as production-stage
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
