--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,11 @@ uvicorn==0.17.5
 python-cas==1.5.0
 itsdangerous==2.1.2
 
+python-multipart
+python-jose[cryptography]
+passlib
+bcrypt
+
 # dev
 pytest-cov==3.0.0
 pytest==7.0.1
