Didn't include backend linting apparently

--- a/backend/.coveragerc
+++ b/backend/.coveragerc
@@ -1,3 +1,5 @@
 # .coveragerc to control unit testing done by coverage.py with pytest-cov
 [run]
-omit = src/main.py
+omit = 
+       src/main.py
+       src/routers/*
