--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,16 @@ services:
       - "traefik.http.routers.backend-router.middlewares=backend-strip-prefix"
       - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/rosalution/api"
       - "traefik.http.services.backend-api-service.loadbalancer.server.port=8000"
+  
+  rosalution-db:
+    image: mongo:5.0.9
+    volumes:
+      - ./etc/fixtures/initial-seed/initial-db-seed.sh:/docker-entrypoint-initdb.d/initial-db-seed.sh
+      - ./etc/fixtures/:/tmp/fixtures
+    networks:
+      - rosalution-network
+    environment:
+      MONGO_INITDB_DATABASE: rosluation_db
 
 networks:
   rosalution-network:
