Adding PyMongo to application and getting started with querying the database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/app
+    environment:
+      MONGODB_HOST: "rosalution-db"
     networks:
       - rosalution-network
     labels:
