--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -22,6 +22,8 @@ services:
     networks:
       - rosalution-network
       - traefik
+    environment:
+      MONGODB_HOST: "rosalution-db"
     deploy:
       labels:
         - "traefik.enable=true"
@@ -32,6 +34,16 @@ services:
         - "traefik.http.routers.rosalution-backend-prod-router.middlewares=backend-strip-prefix"
         - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/rosalution/api"
         - "traefik.http.services.rosalution-backend-prod-service.loadbalancer.server.port=8000"
+
+  rosalution-db:
+    image: mongo:5.0.9
+    volumes:
+      - ./etc/fixtures/initial-seed/initial-db-seed.sh:/docker-entrypoint-initdb.d/initial-db-seed.sh
+      - ./etc/fixtures/:/tmp/fixtures
+    networks:
+      - rosalution-network-prod
+    environment:
+      MONGO_INITDB_DATABASE: rosluation_db
 
 networks:
   rosalution-network:
