Adding the database fixture to be built as a docker ficture by default for production builds at this time and will update later when we revisist for an actual prod deployment

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -36,6 +36,7 @@ services:
         - "traefik.http.services.rosalution-backend-prod-service.loadbalancer.server.port=8000"
 
   rosalution-db:
+    image: gitlab.rc.uab.edu:4567/center-for-computational-genomics-and-data-science/development/rosalution/database-fixture:vprod
     build:
       context: ./etc/fixtures/
       target: production-stage
