Forgot to update the production copies for MONGO_INITDB_DATABASE: rosalution_db

--- a/docker-compose.local-production.yml
+++ b/docker-compose.local-production.yml
@@ -65,7 +65,7 @@ services:
     networks:
       - rosalution-network
     environment:
-      MONGO_INITDB_DATABASE: rosluation_db
+      MONGO_INITDB_DATABASE: rosalution_db
 
 networks:
   rosalution-network:
