--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     networks:
       - rosalution-network
     environment:
-      MONGO_INITDB_DATABASE: rosluation_db
+      MONGO_INITDB_DATABASE: rosalution_db
 
 networks:
   rosalution-network:
