Major changes to the genomic unit collection and other things to make saving annotations PROPERLY in mongo

--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -57,6 +57,7 @@
     "data_set": "transcript_id",
     "data_source": "Ensembl",
     "genomic_unit_type": "hgvs_variant",
+    "transcript": true,
     "annotation_source_type": "http",
     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
     "query_param": "refseq=1;",
@@ -66,6 +67,7 @@
      "data_set": "Polyphen Prediction",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
@@ -75,6 +77,7 @@
      "data_set": "Polyphen Score",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
@@ -84,6 +87,7 @@
      "data_set": "SIFT Prediction",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
@@ -93,6 +97,7 @@
      "data_set": "SIFT Score",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
@@ -102,6 +107,7 @@
      "data_set": "cDNA Change",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
@@ -117,6 +123,7 @@
      "data_set": "Consequence",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
+     "transcript": true,
      "annotation_source_type": "http",
      "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
      "query_param": "",
